--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "javascript plugin to resize table columns",
   "main": "lib/index.js",
   "scripts": {
+    "start": "webpack-dev-server --devtool eval --progress --hot --host 0.0.0.0 --port 4000 --config ./build/webpack.dev.js",
     "build": "cross-env NODE_ENV=production MODULES_ENV=cjs babel ./src -d lib --copy-files",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,10 +21,23 @@
   ],
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-loader": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.0.2"
+    "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.0.2",
+    "css-loader": "^0.28.4",
+    "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   }
 }
