--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --devtool eval --progress --hot --host 0.0.0.0 --port 4000 --config ./build/webpack.dev.js",
     "build": "babel src --out-dir lib",
+    "dist": "webpack --config build/webpack.build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "chenjianbin",
