--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resizable-columns-table",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "javascript plugin to resize table columns",
   "main": "lib/index.js",
   "scripts": {
@@ -36,7 +36,10 @@
   ],
   "devDependencies": {
     "bee-build-tools": "0.0.18",
+    "child-process-promise": "^2.2.1",
+    "colors": "^1.3.3",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "readline-sync": "^1.4.9"
   }
 }
